--- a/cloud.html
+++ b/cloud.html
@@ -57,7 +57,7 @@
                 <div class="col-md-12">
                     <div class="sigline">
                         <p>
-                                Kashifa Ahmed | Case Western Reserve University : Data Analytics & Visualization |
+                                Mohammed Irshad| Case Western Reserve University : Data Analytics & Visualization |
                         </p>
                     </div>
                 </div>
